✨ feat: V2.4 混合检索 + RRF多路召回融合
- 新增 IKeywordRetriever/KeywordRetrieverImpl：MySQL LIKE 关键词检索
- 新增 HybridRetrieverImpl：语义+关键词双路召回 → RRF融合排序
- RRF 常数 k=60，按排名加权求和，实现异构分数统一排序
- 检索接口新增 strategy 参数：SEMANTIC/KEYWORD/HYBRID（默认HYBRID）
- IDocumentChunkRepository 新增 findByKeyword 关键词查询方法
- 补充 V2.4 开发日志：多路召回原理、RRF实现原理与计算示例